<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NCHU Library</string>
    <string name="action_login">Login</string>
    <string name="action_cirlog">Circulation Record</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_systemlog">System Log</string>
    <string name="action_exit">Exit</string>
    <string name="action_LoginNotice">Warning! You should  accepted the terms stated in the articles.</string>
    <string name="JSON_DataLoading">JSON data loading</string>
    <string name="JSON_Data_downlaod_fail">JSON data load fail</string>
    <string name="JSON_Data_error">JSON data error</string>
    <string name="Check_Network">Connection Fail. Check 3G or Wifi Network.</string>
    <string name="ActivityLogin_tvTitle">1.The username is Student ID number.\n2.The password is the same with Single Sign On. </string>
    <string name="ActivityLogin_txID">Single Sign On System ID</string>
    <string name="ActivityLogin_txPassword">Password</string>
    <string name="ActivityLogin_cbNotice">Agree to Terms of Use</string>
    <string name="ActivityLogin_adNotice_Title">NCHU Library APP Service Agreement</string>
    <string name="ActivityLogin_adNotice_Message">1. Push Notification Service: 
the Library will now send circulation notices via APP message, which includes the Due Date Notice, Overdue Notice and Hold Pickup Notice.\n
2. Library APP messages were sent as courtesy notice. 
Failure to receive notifications may NOT be used as an excuse to waive overdue fines or extend load periods.
Patrons should confirm personal circulation status on a regular basis.
</string>
    <string name="ActivityLogin_adNotice_btAgree">Agree</string>
    <string name="ActivityLogin_adNotice_btNoAgree">Disagree</string>
    <string name="ActivityLogin_btLogin">Login</string>
    <string name="ActivityLogin_toastLoginFail">ID or Password Error!!</string>
    <string name="ActivityLogin_toastFieldEmpty">ID or Password Field Is Empty!!</string>
    <string name="ActivityCirculationLog_lvLoanList">Loans</string>
    <string name="ActivityCirculationLog_lvTitle">Title</string>
    <string name="ActivityCirculationLog_lvDueList">Due Date Notice</string>
    <string name="ActivityCirculationLog_lvOverduesList">Overdues Notice</string>
    <string name="ActivityCirculationLog_lvRequestList">Hold Pickup Notice</string>
    <string name="ActivityCirculationLog_lvDuedate">Duedate</string>
    <string name="ActivityCirculationLog_lvOverDue">Overdue</string>
    <string name="ActivityCirculationLog_lvArrivalDate">arrival date</string>
    <string name="ActivityCirculationLog_lvRequestHoldUntilDate">Hold until</string>
    <string name="ActivityCirculationLog_lvCountdown">countdown</string>
    <string name="ActivityCirculationLog_lvDay">days</string>
    <string name="ActivityCirculationLog_lvComma">,</string>
    <string name="ActivityCirculationLog_lvColon">:</string>
    <string name="ActivityCirculationLog_toastTokenSuccess">Data update success.</string>
    <string name="ActivityCirculationLog_toastTokenFail">Patron token or device token error!!</string>
    <string name="ActivityCirculationLog_toastRenewSuccess">Renew success.</string>
    <string name="ActivityCirculationLog_adNotice_btOk">OK</string>
    <string name="ActivityCirculationLog_adNotice_btYes">Yes</string>
    <string name="ActivityCirculationLog_adNotice_btNo">NO</string>
    <string name="ActivityCirculationLog_renew_Title">Renew function</string>
    <string name="ActivityCirculationLog_renew_Message1">Renew list:\nBook title:</string>
    <string name="ActivityCirculationLog_renew_Message2">\nCall number:</string>
    <string name="ActivitySettings_btLogout">Logout</string>
    <string name="ActivitySystemLog_tvJobType">Job Type</string>
    <string name="ActivitySystemLog_tvTime">Time</string>
    <string name="ActivitySystemLog_tvNote">Note</string>
    <string name="ActivitySetting_patronid">ID</string>
    <string name="ActivitySetting_autosync">Autosync</string>
    <string name="ActivitySetting_autosync_detail">Update data from server</string>
    <string name="ActivitySetting_notification">Notification</string>
    <string name="ActivitySetting_notification_detail">Allow send notice for you</string>
    <string name="ActivitySetting_autostart">Auto start</string>
    <string name="ActivitySetting_autostart_detail">Auto start, after reboot.</string>
    <string name="ActivitySetting_library_homepage">Library homepage</string>
    <string name="ActivitySetting_library_facebook">Library facebook</string>
    <string name="ActivitySetting_about">About</string>
    <string name="ActivitySetting_about_Version">version:</string>
    <string name="ActivitySetting_logout">Logout</string>
    <string name="ActivitySetting_logout_detail">Clear your account, but keep the system log.</string>
    <string name="ActivitySettings_LogoutNotice_Title">NCHU Library APP</string>
    <string name="ActivitySettings_LogoutNotice_Message">If you agree logout,then won\'t get any notice.</string>
    <string name="ActivityLock_tvInfo">Please update this APP version!!</string>
    <string name="NotificationTitle">NCHU Library Notification</string>
    <string name="NotificationDue">Due:</string>
    <string name="NotificationOverDue">OverDue:</string>
    <string name="NotificationRequest">Request:</string>
    <string name="NotificationItem"> item,</string>
    <string name="NotificationShortContentHead">You have </string>
    <string name="NotificationShortContentTail">click here for detail.</string>
    <string name="LogType001">Login</string>

</resources>