<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:defaultValue=""
        android:key="PatronBarCode"
        android:summary=""
        android:title="@string/ActivitySetting_patronid" >
    </PreferenceScreen>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="autosync"
        android:summary="@string/ActivitySetting_autosync_detail"
        android:title="@string/ActivitySetting_autosync" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notification"
        android:summary="@string/ActivitySetting_notification_detail"
        android:title="@string/ActivitySetting_notification" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="autostart"
        android:summary="@string/ActivitySetting_autostart_detail"
        android:title="@string/ActivitySetting_autostart" />

    <PreferenceScreen android:title="@string/ActivitySetting_library_homepage" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://www.lib.nchu.edu.tw" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/ActivitySetting_library_facebook" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.facebook.com/nchulib
" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="about"
        android:title="@string/ActivitySetting_about" >
    </PreferenceScreen>
    <PreferenceScreen
        android:key="logoutKey"
        android:summary="@string/ActivitySetting_logout_detail"
        android:title="@string/ActivitySetting_logout" >
    </PreferenceScreen>

</PreferenceScreen>