<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:title="123"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:title="456"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_cirlog"
        android:showAsAction="never"
        android:title="@string/action_cirlog"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:showAsAction="never"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>